baculum: Add endpoint to list files and dirs on storage daemon host
